# PG-SBD-Proj1

./: .envrc  .gitignore  CMakeLists.txt  README.md  makefile  results-1000-50-10.txt  results-10000-50-10.txt  results-100000-50-10.txt  results-1000000-50-10.txt  results-500-50-10.txt  tempScript
Plots/: main.py  output.txt
Plots/data/: results-1000-50-10.txt  results-10000-50-10.txt  results-100000-50-10.txt  results-1000000-50-10.txt
Rapport/: sprawozdanie.md
helper-scripts/: printFile  regenCMake  run  verifyOutput  watch
src/: create_files.cpp  sort_files.cpp  test_iterator.cpp
src/util/: buffer.cpp  buffer.hpp  constants.hpp  create_options.cpp  create_options.hpp  defines.hpp  error.hpp  file_buffering.cpp  file_buffering.hpp  options.cpp  options.hpp  record.cpp  record.hpp  sort_options.cpp  sort_options.hpp  temp_file.cpp  temp_file.hpp
